-n Fixed collections layout issues.

--- a/docroot/sites/default/themes/sitetheme/css/nodes.css
+++ b/docroot/sites/default/themes/sitetheme/css/nodes.css
@@ -163,7 +163,7 @@ h2.block-title a 							{ color:#373830; text-transform:lowercase; }
 .node-podcast .field-name-field-image {
 }
 
-.node-dept-div-collections-landing .field-name-field-image-header {
+.node-dept-div-collections-landing .field-name-field-dept-div-coll-image-header  {
   float:right;
   margin-right:0;
   margin-left:10px;
